# agent-harness

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
docs/: incidents.md
docs/plans/: 2026-06-13-swarm-core.md
scenarios/: a1_code_selfcheck.py  a2_decomposition.py  a3_budget_stop.py  common.py  run_all.py
src/swarm_harness/: cli.py  config.py  llm.py  loop.py  tools.py  worker.py
tasks/: task-01.md  task-02.md  task-03.md  task-04.md  task-05.md  task-06.md  task-06b.md  task-07.md  task-08.md  task-09.md  task-10.md
tests/: test_config.py  test_loop.py  test_parallel.py  test_worker.py
